--- a/V303/Diskussion.tex
+++ b/V303/Diskussion.tex
@@ -1,12 +1,12 @@
 \section{Diskussion}
-Die Abweichungen der Tabelle (\ref{tab:1}) sind im ersten Theorieteil sehr hoch.
-Dies führt dazu, dass die eingestellte Phasendifferenz nicht geeicht war.
-Mit Hilfe der Ausgleichsrechnung ist die tatsächliche Phase um ca. $11 \text{Grad}$ verschoben.
-Somit sind die Abweichungen deutlich geringer gegenüber zum ersten Theorieteil.
-Die dennoch vorhandenen Abweichungen lassen sich aus systematische Fehler rückfolgern.
-Die Amplitude, die $55,6 \, V$ ist, ergibt sich aus der Ausgleichsrechnung eine neue Amplitude von $58,3 \, V$.
-Dies ist eine Abweichung von ca. $4,87 \, \%$.
-Die Abweichungen der Tabelle (\ref{tab:2}) sind durch den Noise Generator zu erklären. Sie führen ebenfalls zu systematische Fehlern.\\
+Dadruch das die eingestellte Phase nicht geeicht war, sind die meisten Messungen deren Fehler
+im Toleranzbereich. Die dennoch vorhandene Abweichungen können durch ein systematischen Fehler
+argumetiert werden. Die Abweichungen der Tabelle (\ref{tab:2}) sind auch durch den Noise Generator
+zu erklären.
+Mit Hilfe der Ausgleichsrechnung ist die tatsächliche Phase um ca. $11 \, \text{Grad}$ verschoben.
+Die Amplitude, die $\frac{U_0}{2} = 55,6 \, V$ ist, ergibt sich aus der Ausgleichsrechnung eine neue Amplitude von $58,3 \, V$.
+Dies ist eine Abweichung von ca. $4,87 \, \%$. \\
 Zur Überprüfung des Strahlungsintensitätsgesetzes mithilfe einer Leuchtdiode sind die Werte bis zu einem
-Abstand von $14,5 \, cm$ nicht physikalisch sinnvoll. Mögliche Gründe für solche Werte sind, dass Störfaktoren wie Deckenlampen die
+Abstand von $r = 14,5 \, cm$ nicht physikalisch sinnvoll, da sie quadratisch abfallen müssten.
+Mögliche Gründe für solche Werte sind, dass Störfaktoren wie Deckenlampen die
 Messwerte verfälschen.
