--- a/V303/Diskussion.tex
+++ b/V303/Diskussion.tex
@@ -1,11 +1,13 @@
 \section{Diskussion}
-Dadruch das die eingestellte Phase nicht geeicht war, sind die meisten Messungen deren Fehler
-im Toleranzbereich. Die dennoch vorhandene Abweichungen können durch ein systematischen Fehler
-argumetiert werden. Die Abweichungen der Tabelle (\ref{tab:2}) sind auch durch den Noise Generator
-zu erklären.
-Mit Hilfe der Ausgleichsrechnung ist die tatsächliche Phase um ca. $11 \, \text{Grad}$ verschoben.
-Die Amplitude, die $\frac{U_0}{2} = 55,6 \, V$ ist, ergibt sich aus der Ausgleichsrechnung eine neue Amplitude von $58,3 \, V$.
-Dies ist eine Abweichung von ca. $4,87 \, \%$. \\
+Durch die Ausgleichsrechnung wurde bestimmt, dass bei dem ersten Teil, ohne das Rauschsignal,
+eine Phasenverschiebung um ca $11 \, \text{Grad}$ zu der eingestellten Phase vorlag.
+Für den zweiten Teil, mit dem Rauschsignal, betrug die Phasenverschiebung ca $ \, \text{Grad}$.
+
+Da der Phasenverschieber nicht geeicht war, gibt es einen Fehler bei der Phasenverschiebung
+und somit auch bei den bestimmten Theoriewerten. Die vorhandenen Abweichungen können durch systematische Fehler
+erklärt werden. Die Abweichungen bei den Messungen mit dem Rauschsignal können auch durch den Noise Generator
+verursacht worden sein.
+
 Zur Überprüfung des Strahlungsintensitätsgesetzes mithilfe einer Leuchtdiode sind die Werte bis zu einem
 Abstand von $r = 14,5 \, cm$ nicht physikalisch sinnvoll, da sie quadratisch abfallen müssten.
 Mögliche Gründe für solche Werte sind, dass Störfaktoren wie Deckenlampen die
