--- a/V303/Auswertung.tex
+++ b/V303/Auswertung.tex
@@ -45,13 +45,13 @@ nicht geeicht war. Die Ausgleichsrechnung wurde mithilfe von Python 3.6 durchgef
 \end{figure}
 Folgende Ausgleichsrechnung wurde angewandt:
 \begin{equation}
-	 U_o = A * cos(x - \phi)
+	 U_o = A \cdot cos(x - \phi)
 	 \label{eq:10}
  \end{equation}
 Dabei ist $A$ die Amplitude, $x$ die eingestellte Phase und $\phi$ die Phasenverschiebung.
 \begin{itemize}
 	\item $A = \SI{58.3(14)}{\volt}$
-	\item $\phi = \num{0.205(30)} \, \text{rad}$
+	\item $\phi = (\num{0.205(30)}) \, \text{rad}$
 \end{itemize}
 \begin{table}[H]
 \centering
@@ -112,28 +112,28 @@ Diese Ausgleichsrechnung wurde wieder mit der Gleichung (\ref{eq:10}) durchgefü
 In diesem Fall ergeben sich für die Parameter:
 
 \begin{itemize}
-	\item $A = \SI{}{\volt}$
-	\item $\phi = \num{} \, \text{rad}$
+	\item $A = \SI{50.55(152)}{\volt}$
+	\item $\phi = (\num{0.311(3)}) \, \text{rad}$
 \end{itemize}
 
 \begin{table}[H]
 \centering
-\caption{Darstellung der Messergebnisse für $U_o =55,6 V$.}
+\caption{Darstellung der Messergebnisse für das verrauschte Signal.}
 \label{tab:2}
  \begin{tabular}{c c c c}
   \toprule
      $U_\text{mess} / V$ & $\Phi/\circ$ & $U_\text{theo} / V$ & $Abweichung/ \%$ \\
   \midrule
-  49,2  & 0  & 	54,36 & 9,49 \\
-  49,6  & 45 &  46,51 & 6,64 \\
-  33,8  & 60 &  37,03 & 8,71 \\
-  14,6  & 90 &  11,30 & 29,2 \\
-  -4,12 & 120& -17,40 & 76,3 \\
-  -36,7 & 150& -41,48 & 11,5 \\
-  -47,8 & 180& -54,44 & 12,2 \\
-  -49,6 & 210& -52,80 & 6,07 \\
-  -34,5 & 240& -37,01 & 6,78 \\
-  -14,6 & 270& -11,34 & 28,8 \\
+  49,2  & 0  & 	48,13 & 2,22 \\
+  49,6  & 45 &  44,98 & 10,27 \\
+  33,8  & 60 &  37,47 & 9,79 \\
+  14,6  & 90 &  15,46 & 5,56 \\
+  -4,12 & 120& -10,65 & 61,31 \\
+  -36,7 & 150& -33,94 & 8,13 \\
+  -47,8 & 180& -48,13 & 0,69 \\
+  -49,6 & 210& -49,41 & 0,38 \\
+  -34,5 & 240& -37,45 & 7,88 \\
+  -14,6 & 270& -15,48 & 5,68 \\
   \bottomrule
 \end{tabular}
 \end{table}
