--- a/V303/Auswertung.tex
+++ b/V303/Auswertung.tex
@@ -153,7 +153,7 @@ Die Abweichung in Tabelle (\ref{tab:1}) und (\ref{tab:2}) sind mit folgende Form
 berechnet worden.
 
 Bei der Leuchtdiode wird eine Rechteckspannung moduliert. Die eingestellte Frequenz ist $\omega = 159,6 \, \si{\hertz}$ und
-besitzt eine Amplitude von $2 \, V$.
+besitzt eine Amplitude von $\SI{2}{\volt}$.
 Folgende Messwerte werden in der Tabelle (\ref{tab:3}) und in der Abbildung (\ref{abb:6}) als
 Diagramm dargestellt.
 
@@ -195,8 +195,8 @@ Diagramm dargestellt.
   \label{abb:6}
 \end{figure}
 
-Die Werte bis zu dem Abstand $r = 14,5 \, cm$ sind physikalische nicht sinnvoll.
-Es soll das Gesetz der Strahlungsintensität in Abhängigkeit des Abstandes nachgewiesen werden.
+Die Werte bis zu dem Abstand $r = 14,5 \, cm$ sind physikalische nicht sinnvoll, nach
+dem Gesetz der Strahlungsintensität. Dieses besagt, dass $I \propto \frac{1}{r^2}$ ist.
 Daher werden die Messergebnisse ab dem Abstand von $r = 14,5 \, cm$ betrachtet und erneut in
 Diagarmm (\ref{abb:7}) dargestellt.
 
