--- a/V303/Diskussion.tex
+++ b/V303/Diskussion.tex
@@ -1,14 +1,16 @@
 \section{Diskussion}
 Durch die Ausgleichsrechnung wurde bestimmt, dass bei dem ersten Teil, ohne das Rauschsignal,
 eine Phasenverschiebung um ca $11 \, \text{Grad}$ zu der eingestellten Phase vorlag.
-Für den zweiten Teil, mit dem Rauschsignal, betrug die Phasenverschiebung ca $ \, \text{Grad}$.
+Für den zweiten Teil, mit dem Rauschsignal, betrug die Phasenverschiebung ca $ 17,8 \, \text{Grad}$.
 
 Da der Phasenverschieber nicht geeicht war, gibt es einen Fehler bei der Phasenverschiebung
 und somit auch bei den bestimmten Theoriewerten. Die vorhandenen Abweichungen können durch systematische Fehler
 erklärt werden. Die Abweichungen bei den Messungen mit dem Rauschsignal können auch durch den Noise Generator
-verursacht worden sein.
+verursacht worden sein.\\\\
 
 Zur Überprüfung des Strahlungsintensitätsgesetzes mithilfe einer Leuchtdiode sind die Werte bis zu einem
 Abstand von $r = 14,5 \, cm$ nicht physikalisch sinnvoll, da sie quadratisch abfallen müssten.
 Mögliche Gründe für solche Werte sind, dass Störfaktoren wie Deckenlampen die
-Messwerte verfälschen.
+Messwerte verfälschen. Außerdem hat das Oszilloskop bei den größeren Abständen die
+Intensität nicht mehr genau messen können, da der Wert zu klein war und Störfaktoren
+immer größer wurden.
