--- a/V301/Auswertung.tex
+++ b/V301/Auswertung.tex
@@ -45,7 +45,7 @@ Damit ergeben sich die Parameter zu:
   \label{abb:4}
 \end{figure}
 
-Daraufhin wurden die Messungen widerholt, es wurde nur eine Gegenspannung
+Daraufhin wurden die Messungen wiederholt, es wurde nun eine Gegenspannung
 hinzugeschaltet. Es sollen wieder die Leerlaufspannung und der Innenwiderstand bestimmt
 werden. Dazu wird mit der Gleichung (\ref{eq:4}) eine Ausgleichsrechnung durchgeführt.
 Eine Graphische Darstellung der Messwerte und der Ausgleichsgeraden sind in Abbildung (\ref{abb:5})
@@ -88,7 +88,7 @@ Durch die Ausgleichsrechnung, die mit Python 3.6 durchgeführt wurde folgt für 
 
 Nun wird noch der Innenwiderstand und die Leerlaufspannung von zwei Wechselspannungen bestimmt.
 Zunächst für eine Rechteckspannung. Für diesen Fall wird wie zuvor mithilfe der Gleichung
-(\ref{eq:4}) eine Lineare Ausgleichsrechnung durchgeführt, welche in der Abbildung
+(\ref{eq:4}) eine lineare Ausgleichsrechnung durchgeführt, welche in der Abbildung
 (\ref{abb:6}) graphisch dargestellt ist. Außerdem sind die Messwerte in Tabelle (\ref{tab:3})
 auch tabellarisch gezeigt.
 Durch die Ausgleichsrechnung ergibt sich für die Werte:
@@ -212,7 +212,7 @@ Die Fehler der systematischen Fehler wurden mit der Gauß´schen Fehlerfortpflan
 bestimmt:
 
 \begin{equation*}
-  \Delta (\Delta U_0) = \sqrt{\left(\frac{1}{R_v} \cdot \Delta R_i\right)}
+  \Delta (\Delta U_0) = \sqrt{\left(\frac{1}{R_v} \cdot \Delta R_i\right)^2}
 \end{equation*}
 
 Die systematischen Fehler sind so gering, dass sie im folgenden nicht weiter beachtet werden. \\\\
@@ -220,7 +220,7 @@ Die systematischen Fehler sind so gering, dass sie im folgenden nicht weiter bea
 Nun soll die Schaltung in Abbildung (\ref{abb:2}) betrachtet werden, wenn das Voltemeter an
 dem Punkt H angeschlossen wird. Dann würde sich ein systematischer Fehler ergeben, der
 durch das Amperemeter verursacht wird. Das ideale Amperemeter hat zwar keinen Innenwiderstand,
-aber das ist in der realität nicht machbar. Deshalb beeinflusst dieser Innenwiderstand
+aber das ist in der Realität nicht machbar. Deshalb beeinflusst dieser Innenwiderstand
 die Spannungsmessung nach dem Kirchhoffschen Gesetz.\\\\
 
 Als letztes wird die umgesetzte Leistung bei der Monozelle betrachtet. Dazu wird mit der
