--- a/V301/Durchfuehrung.tex
+++ b/V301/Durchfuehrung.tex
@@ -1,15 +1,15 @@
 \section{Durchführung}
 Zu Beginn wird die Leelaufspannung mit Hilfe eines Spannungsmessers bestimmt sowie deren Eigenwiderstand.
-In Abbildung (\ref{abb:2}) werden aus unterschiedlichen Spannungsformen (in diesem Fall Gleich-,Rechteck- und Sinusspannung)
-die Spannungswerte sowie Stromwerte notiert.
+In Abbildung (\ref{abb:2}) werden aus unterschiedlichen Spannungsformen (in diesem Fall Gleich-, Rechteck- und Sinusspannung)
+die Spannungswerte sowie Stromwerte notiert und in ein Diagramm aufgetragen.
 \begin{figure}[H]
   \centering
   \includegraphics[width= 10 cm , height=7 cm]{Bild2.png}
   \caption{Stromkreis zu Bestimmung von $U_0$ und $R_i$ \cite{1}}
   \label{abb:2}
 \end{figure}
-In Abbildung (\ref{abb:3}) ist nun eine Gegenspannung angeschlossen. Dies bewirkt, dass sich der Stromfluß
-ändert.
+In Abbildung (\ref{abb:3}) ist nun eine Gegenspannung angeschlossen. Dies bewirkt, dass sich der Stromfluss
+ändert und die jeweiligen Strom und Spannungswerten werden ebenfalls notiert und in ein Diagramm aufgetragen.
 \begin{figure}[H]
   \centering
   \includegraphics[width=10 cm, height= 7 cm]{Bild3.png}
