--- a/V301/Theorie.tex
+++ b/V301/Theorie.tex
@@ -3,8 +3,8 @@ In diesem Versuch soll die Leerlaufspannung als auch den Innenwiderstand gemesse
 
 \section{Theorie}
 Die Leerlaufspannung $U_0$ ist die Spannung an der Spannungsquelle, die über einen endlichen Zeitraum eine konstante
-Leistung liefert, an dem kein Strom $I$ fließt.
-Mit einem Lastwiderstand $R_a$ fließt ein Strom $I$ und die Spannung, die man nun abgreifen kann,
+Leistung liefert, wo kein Strom $I$ fließt.
+Mit einem Lastwiderstand $R_a$ fließt nun ein Strom $I$ und die Spannung, die man nun abgreifen kann,
 nennt sich \enquote{Klemmspannung} $U_k$ und ist geringer als $U_0$.
 In Abbildung (\ref{abb:1}) kann mit Hilfe der Maschenregel (zweites Kirschhoffsche Gesetz)
 \begin{equation*}
@@ -35,5 +35,5 @@ hohe Leistung zu entnehmen. Die abgegebende Leistung kann an dem Lastwiderstand 
   N(R_a) = I^2 \cdot R_a
   \label{eq:3}
 \end{equation}
-als Funktion dagestellt werden. Ist $R_a$ so gewählt, dass $N$ einen Maximum annimmt, so nennt es sich
+als Funktion dagestellt werden. Ist $R_a$ so gewählt, dass die Leistung $N$ einen Maximum annimmt, so nennt sich dies
 eine Leistungsanpassung.
