--- a/V301/Theorie.tex
+++ b/V301/Theorie.tex
@@ -1,5 +1,6 @@
 \section{Zielsetzung}
-In diesem Versuch soll die Leerlaufspannung als auch den Innenwiderstand gemessen werden.
+In diesem Versuch soll die Leerlaufspannung und der Innenwiderstand einer Spannungsquelle
+bestimmt werden.
 
 \section{Theorie}
 Die Leerlaufspannung $U_0$ ist die Spannung an der Spannungsquelle, die über einen endlichen Zeitraum eine konstante
